# cs_gstack

./: .env.example  .gitignore  CEO_PLAN.md  CLAUDE.md  DESIGN.md  ENG_REVIEW.md  PROJECT_BRIEF.md  README.md  TODOS.md  config.toml  pyproject.toml
src/cs2/: __main__.py  cli.py  config.py  pipeline.py
src/cs2/data/: special_patterns.json
src/cs2/engine/: decision.py  enrichment.py  identity.py  liquidity.py  monitor.py  pricing.py
src/cs2/models/: __init__.py  decision.py  items.py  liquidity.py  pricing.py
src/cs2/sources/: base.py  csfloat.py  dmarket.py  skinport.py  steam.py
src/cs2/storage/: cache.py  database.py  logger.py
tests/: conftest.py  test_cache.py  test_cli.py  test_compare.py  test_config.py  test_csfloat.py  test_decision.py  test_dmarket.py  test_enrichment.py  test_identity.py  test_liquidity.py  test_models.py  test_monitor.py  test_offline.py  test_pipeline.py  test_portfolio.py  test_pricing.py  test_skinport.py  test_steam.py
